Documentation changes and code fixes: version 2.4.1
After a big failure with previous exception handling approach, now jOOPL
2.4.1 introduces a very useful and yet powerful exception handling
mechanism.

In the other hand, there were some missing parts of jOOPL in the
documentation:

- The new "Environment" class and its global exception handler.
- More detailed documentation about exception handling!

See the new "Exception handling best practices" section in the sidebar
of official documentation site for more info!

Also, 2.4.1 fixes a hidden issue which was preventing calling the most
derived version of a class member from a class constructor. Now this is
fixed.

--- a/yuidoc/themes/default/partials/sidebar.handlebars
+++ b/yuidoc/themes/default/partials/sidebar.handlebars
@@ -1,72 +1,170 @@
 <div id="api-list">
-    <h2 class="off-left">> Object-oriented programming</h2>
-    <ol id="oop-hints">
-        <li><a href="{{projectRoot}}classes/$namespace.html#method_register" target="_self">Registering namespaces how-to</a></li>
-        <li><a href="{{projectRoot}}classes/$namespace.html#method_using" target="_self">Importing namespaces</a></li>
-        <li><a href="{{projectRoot}}classes/$namespace.html#namespace-global" target="_self">$global namespace</a></li>
-        <li><a href="{{projectRoot}}classes/Define%20classes%20with%20jOOPL.html#class-define" target="_self">Define a class how-to</a></li>
-        <li><a href="{{projectRoot}}classes/Define%20classes%20with%20jOOPL.html#class-constructors" target="_self">Class constructors</a></li>
-        <li><a href="{{projectRoot}}classes/Define%20classes%20with%20jOOPL.html#class-properties" target="_self">Class properties</a></li>
-        <li><a href="{{projectRoot}}classes/Define%20classes%20with%20jOOPL.html#class-methods" target="_self">Class methods</a></li>
-        <li><a href="{{projectRoot}}classes/Define%20classes%20with%20jOOPL.html#class-events" target="_self">Custom events how-to</a></li>
-        <li><a href="{{projectRoot}}classes/Define%20classes%20with%20jOOPL.html#class-instances" target="_self">Creating class instances how-to</a></li>
-        <li><a href="{{projectRoot}}classes/Define%20classes%20with%20jOOPL.html#class-inheritance" target="_self">Class inheritance how-to</a></li>
-        <li><a href="{{projectRoot}}classes/Define%20classes%20with%20jOOPL.html#class-polymorphism" target="_self">Class polymorphism how-to</a></li>
-        <li><a href="{{projectRoot}}classes/Define%20classes%20with%20jOOPL.html#type-metadata" target="_self">Type metadata</a></li>
-        <li><a href="{{projectRoot}}classes/Declaring%20enumerations%20with%20jOOPL.html#index" target="_self">Enumerations</a></li>
-        <li><a href="{{projectRoot}}classes/joopl.Attribute.html#index" target="_self">Custom metadata: attributes</a></li>
-        <li><a href="{{projectRoot}}classes/Exception%20throwing%20best%20practices.html" target="_self">Throwing exceptions best practice</a></li>
-    </ol>
+  <h2 class="off-left">> Object-oriented programming</h2>
+  <ol id="oop-hints">
+    <li>
+      <a href="{{projectRoot}}classes/$namespace.html#method_register" target="_self">Registering namespaces how-to</a>
+    </li>
+    <li>
+      <a href="{{projectRoot}}classes/$namespace.html#method_using" target="_self">Importing namespaces</a>
+    </li>
+    <li>
+      <a href="{{projectRoot}}classes/$namespace.html#namespace-global" target="_self">$global namespace</a>
+    </li>
+    <li>
+      <a href="{{projectRoot}}classes/Define%20classes%20with%20jOOPL.html#class-define" target="_self">Define a class how-to</a>
+    </li>
+    <li>
+      <a href="{{projectRoot}}classes/Define%20classes%20with%20jOOPL.html#class-constructors" target="_self">Class constructors</a>
+    </li>
+    <li>
+      <a href="{{projectRoot}}classes/Define%20classes%20with%20jOOPL.html#class-properties" target="_self">Class properties</a>
+    </li>
+    <li>
+      <a href="{{projectRoot}}classes/Define%20classes%20with%20jOOPL.html#class-methods" target="_self">Class methods</a>
+    </li>
+    <li>
+      <a href="{{projectRoot}}classes/Define%20classes%20with%20jOOPL.html#class-events" target="_self">Custom events how-to</a>
+    </li>
+    <li>
+      <a href="{{projectRoot}}classes/Define%20classes%20with%20jOOPL.html#class-instances" target="_self">Creating class instances how-to</a>
+    </li>
+    <li>
+      <a href="{{projectRoot}}classes/Define%20classes%20with%20jOOPL.html#class-inheritance" target="_self">Class inheritance how-to</a>
+    </li>
+    <li>
+      <a href="{{projectRoot}}classes/Define%20classes%20with%20jOOPL.html#class-polymorphism" target="_self">Class polymorphism how-to</a>
+    </li>
+    <li>
+      <a href="{{projectRoot}}classes/Define%20classes%20with%20jOOPL.html#type-metadata" target="_self">Type metadata</a>
+    </li>
+    <li>
+      <a href="{{projectRoot}}classes/Declaring%20enumerations%20with%20jOOPL.html#index" target="_self">Enumerations</a>
+    </li>
+    <li>
+      <a href="{{projectRoot}}classes/joopl.Attribute.html#index" target="_self">Custom metadata: attributes</a>
+    </li>
+    <li>
+      <a href="{{projectRoot}}classes/Exception%20handling%20best%20practices.html#global-exception-handler" target="_self">
+        <strong>Global exception handler</strong>
+      </a>
+    </li>
+    <li>
+      <a href="{{projectRoot}}classes/Exception%20handling%20best%20practices.html" target="_self">
+        <strong>Exception handling best practices</strong>
+      </a>
+    </li>
+  </ol>
 
-    <h2 class="off-left">> Tests</h2>
-    <ol id="oop-hints">
-        <li><a href="{{projectRoot}}test/namespace.test.html" target="_self">Namespace tests</a></li>
-        <li><a href="{{projectRoot}}test/class.test.html" target="_self">Class tests</a></li>
-        <li><a href="{{projectRoot}}test/enum.test.html" target="_self">Enumeration tests</a></li>
-    </ol>
+  <h2 class="off-left">> Tests</h2>
+  <ol id="oop-hints">
+    <li>
+      <a href="{{projectRoot}}test/namespace.test.html" target="_self">Namespace tests</a>
+    </li>
+    <li>
+      <a href="{{projectRoot}}test/class.test.html" target="_self">Class tests</a>
+    </li>
+    <li>
+      <a href="{{projectRoot}}test/enum.test.html" target="_self">Enumeration tests</a>
+    </li>
+  </ol>
 
-    <h2 class="off-left">> API reference</h2>
-    <ol id="class-list"> 
-        <li><a href="{{projectRoot}}classes/joopl.Object.html" target="_self"><strong>joopl.Object</strong></a></li>
-        <li><a href="{{projectRoot}}classes/joopl.Attribute.html" target="_self"><strong>joopl.Attribute</strong></a></li>
-        <li><a href="{{projectRoot}}classes/joopl.Enum.html" target="_self"><strong>joopl.Enum</strong></a></li>
-        <li><a href="{{projectRoot}}classes/joopl.EnumValue.html" target="_self"><strong>joopl.EnumValue</strong></a></li>
-        <li><a href="{{projectRoot}}classes/joopl.Type.html" target="_self"><strong>joopl.Type</strong></a></li>
-        <li><a href="{{projectRoot}}classes/joopl.Exception.html" target="_self"><strong>joopl.Exception</strong></a></li>
-        <li><a href="{{projectRoot}}classes/joopl.ArgumentException.html" target="_self"><strong>joopl.ArgumentException</strong></a></li>
-        <li><a href="{{projectRoot}}classes/joopl.NotImplementedException.html" target="_self"><strong>joopl.NotImplementedException</strong></a></li>
-    </ol>
+  <h2 class="off-left">> API reference</h2>
+  <ol id="class-list">
+    <li>
+      <a href="{{projectRoot}}classes/joopl.Object.html" target="_self">
+        <strong>joopl.Object</strong>
+      </a>
+    </li>
+    <li>
+      <a href="{{projectRoot}}classes/joopl.Attribute.html" target="_self">
+        <strong>joopl.Attribute</strong>
+      </a>
+    </li>
+    <li>
+      <a href="{{projectRoot}}classes/joopl.Enum.html" target="_self">
+        <strong>joopl.Enum</strong>
+      </a>
+    </li>
+    <li>
+      <a href="{{projectRoot}}classes/joopl.EnumValue.html" target="_self">
+        <strong>joopl.EnumValue</strong>
+      </a>
+    </li>
+    <li>
+      <a href="{{projectRoot}}classes/joopl.Type.html" target="_self">
+        <strong>joopl.Type</strong>
+      </a>
+    </li>
+    <li>
+      <a href="{{projectRoot}}classes/joopl.Environment.html" target="_self">
+        <strong>joopl.Environment</strong>
+      </a>
+    </li>
+    <li>
+      <a href="{{projectRoot}}classes/joopl.Exception.html" target="_self">
+        <strong>joopl.Exception</strong>
+      </a>
+    </li>
+    <li>
+      <a href="{{projectRoot}}classes/joopl.ArgumentException.html" target="_self">
+        <strong>joopl.ArgumentException</strong>
+      </a>
+    </li>
+    <li>
+      <a href="{{projectRoot}}classes/joopl.NotImplementedException.html" target="_self">
+        <strong>joopl.NotImplementedException</strong>
+      </a>
+    </li>
+  </ol>
 
-    <h2 class="off-left">> Quick links</h2>
-    <ol id="quick-links">
-        <li><a href="https://groups.google.com/forum/#!forum/joopl" target="_blank">jOOPL Google Group</a></li>
-        <li><a href="https://github.com/mfidemraizer/joopl" target="_blank">jOOPL on GitHub</a></li>
-        <li><a href="http://cdn.jsdelivr.net/joopl/2.4.0/joopl.min.js" target="_blank"><strong>Download minified jOOPL 2.4.0 (CDN)</strong></a></li>
-        <li><a href="https://github.com/mfidemraizer/joopl/issues" target="_blank">Issue tracker</a></li>
-    </ol>
+  <h2 class="off-left">> Quick links</h2>
+  <ol id="quick-links">
+    <li>
+      <a href="https://groups.google.com/forum/#!forum/joopl" target="_blank">jOOPL Google Group</a>
+    </li>
+    <li>
+      <a href="https://github.com/mfidemraizer/joopl" target="_blank">jOOPL on GitHub</a>
+    </li>
+    <li>
+      <a href="http://cdn.jsdelivr.net/joopl/2.4.0/joopl.min.js" target="_blank">
+        <strong>Download minified jOOPL 2.4.0 (CDN)</strong>
+      </a>
+    </li>
+    <li>
+      <a href="https://github.com/mfidemraizer/joopl/issues" target="_blank">Issue tracker</a>
+    </li>
+  </ol>
 
-    <div id="api-tabview" class="tabview" style="display: none">
-        <ul class="tabs">
-            <li><a href="#api-classes">Classes</a></li>
-            <li><a href="#api-modules">Modules</a></li>
-        </ul>
+  <div id="api-tabview" class="tabview" style="display: none">
+    <ul class="tabs">
+      <li>
+        <a href="#api-classes">Classes</a>
+      </li>
+      <li>
+        <a href="#api-modules">Modules</a>
+      </li>
+    </ul>
 
-        <div id="api-tabview-filter">
-            <input type="search" id="api-filter" placeholder="Type to filter APIs">
+    <div id="api-tabview-filter">
+      <input type="search" id="api-filter" placeholder="Type to filter APIs">
         </div>
 
-        <div id="api-tabview-panel">
-            <ul id="api-classes" class="apis classes">
-            {{#classes}}
-                <li><a href="{{../projectRoot}}classes/{{name}}.html">{{displayName}}</a></li>
-            {{/classes}}
-            </ul>
+    <div id="api-tabview-panel">
+      <ul id="api-classes" class="apis classes">
+        {{#classes}}
+        <li>
+          <a href="{{../projectRoot}}classes/{{name}}.html">{{displayName}}</a>
+        </li>
+        {{/classes}}
+      </ul>
 
-            <ul id="api-modules" class="apis modules">
-            {{#allModules}}
-                <li><a href="{{../projectRoot}}modules/{{name}}.html">{{displayName}}</a></li>
-            {{/allModules}}
-            </ul>
-        </div>
+      <ul id="api-modules" class="apis modules">
+        {{#allModules}}
+        <li>
+          <a href="{{../projectRoot}}modules/{{name}}.html">{{displayName}}</a>
+        </li>
+        {{/allModules}}
+      </ul>
     </div>
+  </div>
 </div>
