--- a/yuidoc/themes/default/partials/index.handlebars
+++ b/yuidoc/themes/default/partials/index.handlebars
@@ -3,17 +3,21 @@
             <a href="https://travis-ci.org/mfidemraizer/joopl" target="_blank">
                 <img src="https://travis-ci.org/mfidemraizer/joopl.png?branch=main" alt="Build Status" />
             </a>
-            <h2>Welcome to the official jOOPL site!</h2>
+            <h2>Welcome to the official jOOPL Web site!</h2>
 
             <h3>Useful links</h3>
             <ol id="main-links">
                 <li id="joopl-minified"><a href="http://cdn.jsdelivr.net/joopl/2.4.1/joopl.min.js" target="_self">jOOPL 2.4.1 CDN</a></li>
-                <li id="joopl-sourcecode"><a href="https://github.com/mfidemraizer/joopl" target="_self">Source code on GitHub!</a></li>
+                <li id="joopl-sourcecode"><a href="https://github.com/mfidemraizer/joopl" target="_self">GitHub Repository</a></li>
             </ol>
 
             <p>jOOPL stands for <strong>J</strong>avaScript <strong>O</strong>bject-<strong>O</strong>riented <strong>P</strong>rogramming <strong>L</strong>ibrary.</p>
-            <p>JavaScript has a limited but yet useful type definition system. In comparison to other modern programming languages like C#, Java, Ruby, Python and many others, JavaScript is not class-oriented but prototype-oriented.</p>
-            <p>jOOPL introduces a powerful class-oriented type definition system that equals most of features found in modern and well-known object-oriented languages like C# and Java, and it retains 100% compatibility with plain JavaScript objects since jOOPL creates standard JavaScript constructors.</p>
+            <p>Write powerful and elegant JavaScript code on top of class-based, feature-rich object-oriented programming paradigm which works both on browsers
+            and JavaScript runtimes like NodeJS!</p>
+
+            <h3>Simple inheritance sample!</h3>
+
+            <iframe width="100%" height="470" src="http://jsfiddle.net/mfidemraizer/XTE5z/embedded/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
 
             <h3>Licensing</h3>
             <p>jOOPL is a completely open sourced, free-of-charge JavaScript library distributed under the Apache License 2.0.</p>
