--- a/yuidoc/themes/default/partials/sidebar.handlebars
+++ b/yuidoc/themes/default/partials/sidebar.handlebars
@@ -2,10 +2,7 @@
   <h2 class="off-left">> Object-oriented programming</h2>
   <ol id="oop-hints">
     <li>
-      <a href="{{projectRoot}}classes/$namespace.html#method_register" target="_self">Registering namespaces how-to</a>
-    </li>
-    <li>
-      <a href="{{projectRoot}}classes/$namespace.html#method_using" target="_self">Importing namespaces</a>
+      <a href="{{projectRoot}}classes/$namespace.html" target="_self">Namespacing how-to</a>
     </li>
     <li>
       <a href="{{projectRoot}}classes/$namespace.html#namespace-global" target="_self">$global namespace</a>
