--- a/yuidoc/themes/default/partials/index.handlebars
+++ b/yuidoc/themes/default/partials/index.handlebars
@@ -4,8 +4,6 @@
                 <img src="https://travis-ci.org/mfidemraizer/joopl.png?branch=main" alt="Build Status" />
             </a>
             <h2>Welcome to the official jOOPL Web site!</h2>
-
-            <h3>Useful links</h3>
             <ol id="main-links">
                 <li id="joopl-minified"><a href="http://cdn.jsdelivr.net/joopl/2.4.1/joopl.min.js" target="_self">jOOPL 2.4.1 CDN</a></li>
                 <li id="joopl-sourcecode"><a href="https://github.com/mfidemraizer/joopl" target="_self">GitHub Repository</a></li>
@@ -19,24 +17,20 @@
 
             <iframe width="100%" height="470" src="http://jsfiddle.net/mfidemraizer/XTE5z/embedded/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
 
-            <h3>Licensing</h3>
-            <p>jOOPL is a completely open sourced, free-of-charge JavaScript library distributed under the Apache License 2.0.</p>
-
-            <h3>Now jOOPL on jsDelivr!</h3>
-            <p>Now jOOPL is in <a href="http://www.jsdelivr.com" target="_blank">jsDelivr</a>, an open <i>Content Delivery Network</i>. From now, please include jOOPL in your Web sites using this full URL:</p>
-            <a href="http://cdn.jsdelivr.net/joopl/2.3.0/joopl.min.js" target="_blank"><strong>http://cdn.jsdelivr.net/joopl/2.3.0/joopl.min.js</strong></a>
-            <p>Serving jOOPL from a CDN is very important. <a href="http://en.wikipedia.org/wiki/Content_delivery_network" target="_blank">Learn more about <i>Content Delivery Networks</i> here (Wikipedia)</a></p>
-            <p>Of course, jOOPL can be also downloaded to be used from a local file system.</p>
-
-            <h3>How to get started?</h3>
-            <p>First of all, take a look at the <a href="classes/$def.html">documentation talking about how to work with classes</a> and <a href="classes/$namespace.html">namespaces</a>!</p>
-            <p>About samples, now jOOPL has a test suite developed using the great <a href="http://qunitjs.com/" target="_blank">QUnit testing framework made by the jQuery team</a>:</p>
+            <h3>Get started!</h3>
+            <p>First of all, take a look at <a href="classes/Define%20classes%20with%20jOOPL.html">documentation about how to work with classes and object-oriented programming</a> and <a href="classes/$namespace.html">namespacing how-to</a>!</p>
+            
+            <p>Furthermore, if you are looking for samples, now jOOPL has a test suite developed using the great <a href="http://qunitjs.com/" target="_blank">QUnit testing framework made by the jQuery team</a>. Just see tests' source code and check each test case: it will give you a big picture about 
+            jOOPL capabilities!</p>
             <ol>
                 <li><a href="test/namespace.test.html">Namespace tests</a></li>
                 <li><a href="test/class.test.html">Class tests</a></li>
                 <li><a href="test/enum.test.html">Enum tests</a></li>
             </ol>
             <p>A good idea is taking a look at source code of the whole test pages: the jOOPL-based JavaScript code is developed in the body of the documents. That way, anyone can explore all jOOPL features, as the tests are also documentation!</p>
+
+            <h3>Licensing</h3>
+            <p>jOOPL is a completely open sourced, free-of-charge JavaScript library distributed under the Apache License 2.0.</p>
 
             <h3>Ok, wait. Why jOOPL? Why object-oriented programming?</h3>
             <p>It is all about taking the client-side Web and server development to the next level: <strong>let's create true reusable and maintainable JavaScript 
