--- a/yuidoc/themes/default/partials/sidebar.handlebars
+++ b/yuidoc/themes/default/partials/sidebar.handlebars
@@ -8,34 +8,34 @@
       <a href="{{projectRoot}}classes/$namespace.html#namespace-global" target="_self">$global namespace</a>
     </li>
     <li>
-      <a href="{{projectRoot}}classes/Define%20classes%20with%20jOOPL.html#class-define" target="_self">Define a class how-to</a>
+      <a href="{{projectRoot}}classes/Classes.html#class-define" target="_self">Define a class how-to</a>
     </li>
     <li>
-      <a href="{{projectRoot}}classes/Define%20classes%20with%20jOOPL.html#class-constructors" target="_self">Class constructors</a>
+      <a href="{{projectRoot}}classes/Classes.html#class-constructors" target="_self">Class constructors</a>
     </li>
     <li>
-      <a href="{{projectRoot}}classes/Define%20classes%20with%20jOOPL.html#class-properties" target="_self">Class properties</a>
+      <a href="{{projectRoot}}classes/Classes.html#class-properties" target="_self">Class properties</a>
     </li>
     <li>
-      <a href="{{projectRoot}}classes/Define%20classes%20with%20jOOPL.html#class-methods" target="_self">Class methods</a>
+      <a href="{{projectRoot}}classes/Classes.html#class-methods" target="_self">Class methods</a>
     </li>
     <li>
-      <a href="{{projectRoot}}classes/Define%20classes%20with%20jOOPL.html#class-events" target="_self">Custom events how-to</a>
+      <a href="{{projectRoot}}classes/Classes.html#class-events" target="_self">Custom events how-to</a>
     </li>
     <li>
-      <a href="{{projectRoot}}classes/Define%20classes%20with%20jOOPL.html#class-instances" target="_self">Creating class instances how-to</a>
+      <a href="{{projectRoot}}classes/Classes.html#class-instances" target="_self">Creating class instances how-to</a>
     </li>
     <li>
-      <a href="{{projectRoot}}classes/Define%20classes%20with%20jOOPL.html#class-inheritance" target="_self">Class inheritance how-to</a>
+      <a href="{{projectRoot}}classes/Classes.html#class-inheritance" target="_self">Class inheritance how-to</a>
     </li>
     <li>
-      <a href="{{projectRoot}}classes/Define%20classes%20with%20jOOPL.html#class-polymorphism" target="_self">Class polymorphism how-to</a>
+      <a href="{{projectRoot}}classes/Classes.html#class-polymorphism" target="_self">Class polymorphism how-to</a>
     </li>
     <li>
-      <a href="{{projectRoot}}classes/Define%20classes%20with%20jOOPL.html#type-metadata" target="_self">Type metadata</a>
+      <a href="{{projectRoot}}classes/Classes.html#type-metadata" target="_self">Type metadata</a>
     </li>
     <li>
-      <a href="{{projectRoot}}classes/Declaring%20enumerations%20with%20jOOPL.html#index" target="_self">Enumerations</a>
+      <a href="{{projectRoot}}classes/Enumerations.html#index" target="_self">Enumerations</a>
     </li>
     <li>
       <a href="{{projectRoot}}classes/joopl.Attribute.html#index" target="_self">Custom metadata: attributes</a>
@@ -95,6 +95,11 @@
     <li>
       <a href="{{projectRoot}}classes/joopl.Environment.html" target="_self">
         <strong>joopl.Environment</strong>
+      </a>
+    </li>
+    <li>
+      <a href="{{projectRoot}}classes/joopl.Event.html" target="_self">
+        <strong>joopl.Event</strong>
       </a>
     </li>
     <li>
