Dependency loading fix and working on doc
- It was an error on joopl: some code was untested and it didn't worked.
Asynchronous dependency loading using $import.modules was
broken..........

--- a/yuidoc/themes/default/partials/sidebar.handlebars
+++ b/yuidoc/themes/default/partials/sidebar.handlebars
@@ -52,6 +52,16 @@
     </li>
   </ol>
 
+  <h2 class="off-left">> Asynchronous dependency loading</h2>
+  <ol id="oop-hints">
+    <li>
+      <a href="{{projectRoot}}classes/joopl-analyzer.html" target="_self">jOOPL Analyzer</a>
+    </li>
+    <li>
+      <a href="{{projectRoot}}classes/$import.html" target="_self">Asynchronous dependency loading</a>
+    </li>
+  </ol>
+
   <h2 class="off-left">> Tests</h2>
   <ol id="oop-hints">
     <li>
