More doc for incoming 2.5.2 version...
Working on a RevealJS-based jOOPL presentation as a quick summary of its
features.

--- a/yuidoc/themes/default/partials/index.handlebars
+++ b/yuidoc/themes/default/partials/index.handlebars
@@ -50,7 +50,7 @@
 
             <p>And it is a tiny JavaScript library when minimized (<i>~10KB</i>)!!</p>
 
-            <h3>I see, I see (blah, blah...). And what about a hello world sample? ;-)</h3>
+            <h3>I see, I see (TL;DR). And what about a hello world sample? ;-)</h3>
             <p>The next code listing creates a namespace called <i>samples</i>. A class <i>ClassA</i> in the namespace (the <i>this</i> keyword
             represents the registered namespace) implements a method to say "hello world!" and, finally, an instance of the whole class is created in order to call the method to say <i>hello world!</i>:</p>
             <pre>
