--- a/yuidoc/themes/default/partials/sidebar.handlebars
+++ b/yuidoc/themes/default/partials/sidebar.handlebars
@@ -1,4 +1,5 @@
 <div id="api-list">
+  <a href="{{projectAssets}}/presentation.html" target="_blank"><strong>jOOPL Presentation!</strong></a>
   <h2 class="off-left">> Object-oriented programming</h2>
   <ol id="oop-hints">
     <li>
@@ -59,6 +60,9 @@
     </li>
     <li>
       <a href="{{projectRoot}}classes/$import.html" target="_self">Asynchronous dependency loading</a>
+    </li>
+    <li>
+      <a href="{{projectRoot}}classes/grunt-joopl-analyzer.html" target="_self">jOOPL Analyzer GruntJS task</a>
     </li>
   </ol>
 
