--- a/yuidoc/themes/default/partials/sidebar.handlebars
+++ b/yuidoc/themes/default/partials/sidebar.handlebars
@@ -69,13 +69,7 @@
   <h2 class="off-left">> Tests</h2>
   <ol id="oop-hints">
     <li>
-      <a href="{{projectRoot}}test/namespace.test.html" target="_self">Namespace tests</a>
-    </li>
-    <li>
-      <a href="{{projectRoot}}test/class.test.html" target="_self">Class tests</a>
-    </li>
-    <li>
-      <a href="{{projectRoot}}test/enum.test.html" target="_self">Enumeration tests</a>
+      <a href="{{projectRoot}}test/test.html" target="_blank">QUnit tests</a>
     </li>
   </ol>
 
@@ -142,8 +136,8 @@
       <a href="https://github.com/mfidemraizer/joopl" target="_blank">jOOPL on GitHub</a>
     </li>
     <li>
-      <a href="http://cdn.jsdelivr.net/joopl/2.4.1/joopl.min.js" target="_blank">
-        <strong>jOOPL 2.4.1 (CDN)</strong>
+      <a href="http://cdn.jsdelivr.net/joopl/2.5.2/joopl.min.js" target="_blank">
+        <strong>jOOPL 2.5.2 (CDN)</strong>
       </a>
     </li>
     <li>
