Updating doc site to reflect 2.5.2 changes

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -21,6 +21,13 @@ Here's a quick lookup table:
 #page-footer {
     margin: 0 auto;
     width: 36em;
+    color: white;
+    font-weight: bold;
+}
+
+#page-footer a {
+    color: white;
+    font-weight: bold;
 }
 
 .off-left {
@@ -95,8 +102,11 @@ ol#class-list li {
 }
 
 #sidebar-container {
-    background-color: white;
-    box-shadow: 0 0 5px 5px #25A3D9;
+    background: linear-gradient(to bottom, rgba(254,255,255,0.5) 0,rgba(254,255,255,0.7) 50px,rgba(254,255,255,1) 100px,rgba(255,255,255,1) 150px,rgba(255,255,255,1) 100%);
+    border: 2px solid #FFFFFF;
+    border-radius: 10px;
+    box-shadow: 0 0 5px 1px rgba(37, 163, 217, 0.5) inset;
+    margin-right: 10px;
     padding: 10px 30px;
     width: 260px;
 }
@@ -124,12 +134,10 @@ html {
 }
 
 body {
-    border-top: 3px ridge #AAAAAA;
-    box-shadow: 0 0 190px 5px #25A3D9 inset;
+    background-color: #555555;
     font-family: 'Open Sans',sans-serif;
     font-size: 14px;
     margin: 0;
-    padding: 10px;
     min-width: 1300px;
 }
 
@@ -292,10 +300,11 @@ th {
     padding: 0 15px 0 10px;
 }
 #bd {
+    margin: 0 auto;
+    overflow: hidden;
     padding: 7px 0 10px;
     position: relative;
-    width: 99%;
-    min-width: 1300px;
+    width: 1150px;
 }
 
 /* -- Table of Contents ----------------------------------------------------- */
@@ -883,3 +892,17 @@ kbd .cmd { font-family: Monaco, Helvetica; }
     font-weight: bold;
 }
 
+#main-content {
+        background: linear-gradient(to bottom, rgba(254,255,255,0.5) 0,rgba(254,255,255,0.7) 50px,rgba(254,255,255,1) 100px,rgba(255,255,255,1) 150px,rgba(255,255,255,1) 100%);
+    border: 2px solid #FFFFFF;
+    border-radius: 10px;
+    box-shadow: 0 0 5px 1px rgba(37, 163, 217, 0.5) inset;
+    max-width: 800px;
+    padding-bottom: 2em;
+    padding-top: 2em;
+}
+
+.code {
+    max-width: 690px !important;
+    width: 690px !important;
+}
