--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -102,10 +102,10 @@ ol#class-list li {
 }
 
 #sidebar-container {
-    background: linear-gradient(to bottom, rgba(254,255,255,0.5) 0,rgba(254,255,255,0.7) 50px,rgba(254,255,255,1) 100px,rgba(255,255,255,1) 150px,rgba(255,255,255,1) 100%);
+    background-color: white; 
     border: 2px solid #FFFFFF;
-    border-radius: 10px;
-    box-shadow: 0 0 5px 1px rgba(37, 163, 217, 0.5) inset;
+    border-radius: 0;
+    box-shadow: 0;
     margin-right: 10px;
     padding: 10px 30px;
     width: 260px;
@@ -292,6 +292,7 @@ th {
 #doc {
     margin: auto;
     min-width: 1024px;
+    background-color: white;
 }
 
 .content { padding: 0 20px 0 0; }
@@ -893,10 +894,10 @@ kbd .cmd { font-family: Monaco, Helvetica; }
 }
 
 #main-content {
-        background: linear-gradient(to bottom, rgba(254,255,255,0.5) 0,rgba(254,255,255,0.7) 50px,rgba(254,255,255,1) 100px,rgba(255,255,255,1) 150px,rgba(255,255,255,1) 100%);
+    background-color: white;
     border: 2px solid #FFFFFF;
-    border-radius: 10px;
-    box-shadow: 0 0 5px 1px rgba(37, 163, 217, 0.5) inset;
+    border-radius: 0;
+    box-shadow: none;
     max-width: 800px;
     padding-bottom: 2em;
     padding-top: 2em;
